Clean up: use methods and constructors taking Charset as parameter
JDK 10 added a set of methods and constructors in API that take argument
of Charset class while overloaded analogues take `String charset` argument
and throw `UnsupportedEncodingException`